<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tugasakhirrifgi.lsdetect.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detection"
            app:destination="@id/navigation_detection" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detection"
        android:name="com.tugasakhirrifgi.lsdetect.ui.detection.DetectionFragment"
        android:label="@string/title_detection"
        tools:layout="@layout/fragment_detection" >
        <action
            android:id="@+id/action_navigation_detection_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tugasakhirrifgi.lsdetect.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>