<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ui.home.inform2.MedicineFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:src="@drawable/penyebab1" />
        <TextView
            android:id="@+id/tv_main1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/image1"
            android:text="@string/obatMain1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_mainkonten1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_below="@+id/tv_main1"
            android:lineSpacingExtra="4dp"
            android:text="@string/obat1"
            android:textSize="17sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_mainkonten15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_below="@+id/tv_mainkonten1"
            android:lineSpacingExtra="4dp"
            android:text="@string/obat2"
            android:textSize="17sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_main2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/tv_mainkonten15"
            android:text="@string/obatMain2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_mainkonten2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_below="@+id/tv_main2"
            android:lineSpacingExtra="4dp"
            android:text="@string/obat3"
            android:textSize="17sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_mainkonten25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_below="@+id/tv_mainkonten2"
            android:lineSpacingExtra="4dp"
            android:text="@string/obat4"
            android:textSize="17sp"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_margin="8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_mainkonten25"
            android:src="@drawable/pengobatan1" />

    </RelativeLayout>

</ScrollView>