<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/custom_modal_layout"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/tv_modal_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/modalContent"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/color1"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_modal_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/modalContent2"
            android:textSize="16sp"
            android:textColor="@color/color1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/btn_modal_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modalContent1"
            android:background="@drawable/shape_button"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>
</LinearLayout>