<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newHistory.detail.DetailHistoryActivity">

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/imgv_content"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/result"
            android:src="@drawable/ic_placeholder_scan"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frame_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/custom_corner_container">

            <TextView
                android:id="@+id/tv_hasilText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tv_confidence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultConfidence"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/tv_dateContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testText"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/tv_treat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/tv_treatContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testText"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>