<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ui.home.inform1.InformGejalaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/include"
            layout="@layout/custom_toolbar"/>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/include"
            android:contentDescription="@string/inform1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/lsd1"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"/>

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/lsd2"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"/>

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/lsd3"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"/>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/tv_mainInform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informMainKonten"
            android:layout_below="@+id/horizontalScrollView"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_konten1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/htmlTest"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:lineSpacingExtra="4dp"
            android:layout_below="@+id/tv_mainInform"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>


    </RelativeLayout>

</ScrollView>